# ddup-bak

./: .gitignore  ARCHIVE.md  Cargo.toml  README.md
.github/workflows/: release.yml
c/: Cargo.toml  Makefile  build.rs  cbindgen.toml
c/include/: libddupbak.h
c/src/: archive.rs  entries.rs  lib.rs  reader.rs  repository.rs
go/: README.md  go.mod  include
go/ddupbak/: archive.go  ddupbak.go  entry.go  reader.go  repository.go
src/: archive.rs  chunks.rs  lib.rs  main.rs  repository.rs  varint.rs
src/archive/: entries.rs  mod.rs
src/chunks/: hasher.rs  lock.rs  mod.rs  reader.rs  storage.rs
src/commands/: clean.rs  init.rs  mod.rs  rebuild.rs
src/commands/backup/: convert.rs  create.rs  delete.rs  list.rs  mod.rs  restore.rs
src/commands/backup/fs/: cat.rs  ls.rs  mod.rs
