[package]
name = "ddup-bak"
description = "An archive format that supports multiple compression algorithms at once."
version = "0.3.13"
edition = "2024"
license = "MIT"
homepage = "https://github.com/0x7d8/ddup-bak"
repository = "https://github.com/0x7d8/ddup-bak.git"
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "ddup-bak"
path = "src/main.rs"

[dependencies]
blake2 = "0.10.6"
flate2 = "1.1.1"
positioned-io = "0.3.4"
rayon = "1.10.0"
