[package]
name = "ddup-bak"
description = "An archive format that supports multiple compression algorithms at once."
version = "0.5.4"
edition = "2024"
license = "MIT"
homepage = "https://github.com/0x7d8/ddup-bak"
repository = "https://github.com/0x7d8/ddup-bak.git"
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "ddup-bak"
path = "src/main.rs"

[dependencies]
blake2 = "0.10.6"
flate2 = "1.1.1"
positioned-io = "0.3.4"
rayon = "1.10.0"
dashmap = { version = "6.1.0", features = ["inline"] }

# CLI
clap = "4.5.37"
colored = "3.0.0"
chrono = "0.4.40"
libc = "0.2.172"
tar = "0.4.44"
